// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`View > default 1`] = `
<div
  class="css-1uo959j"
/>
`;

exports[`View > non-text is rendered 1`] = `
<div
  class="css-1uo959j"
>
  <div
    class="css-1uo959j"
    data-testid="1"
  />
</div>
`;

exports[`View > prop "aria-label" > value is set 1`] = `
<div
  aria-label="accessibility label"
  class="css-1uo959j"
/>
`;

exports[`View > prop "aria-labelledby" > value is set 1`] = `
<div
  aria-labelledby="123"
  class="css-1uo959j"
/>
`;

exports[`View > prop "aria-live" > value is set 1`] = `
<div
  aria-live="polite"
  class="css-1uo959j"
/>
`;

exports[`View > prop "dir" > value is "ltr" 1`] = `
<div
  class="css-1uo959j"
  dir="ltr"
/>
`;

exports[`View > prop "dir" > value is "rtl" 1`] = `
<div
  class="css-1uo959j"
  dir="rtl"
/>
`;

exports[`View > prop "href" > href with role 1`] = `
<a
  class="css-1uo959j"
  href="https://example.com"
  role="presentation"
/>
`;

exports[`View > prop "href" > value is set 1`] = `
<a
  class="css-1uo959j"
  href="https://example.com"
/>
`;

exports[`View > prop "hrefAttrs" > requires "href" 1`] = `
<div
  class="css-1uo959j"
/>
`;

exports[`View > prop "hrefAttrs" > target variant is set 1`] = `
<a
  class="css-1uo959j"
  href="https://example.com"
  target="_blank"
/>
`;

exports[`View > prop "hrefAttrs" > undefined values are excluded 1`] = `
<a
  class="css-1uo959j"
  href="https://example.com"
/>
`;

exports[`View > prop "hrefAttrs" > value is set 1`] = `
<a
  class="css-1uo959j"
  download="filename.jpg"
  href="https://example.com"
  rel="nofollow"
  target="_blank"
/>
`;

exports[`View > prop "id" > value is set 1`] = `
<div
  class="css-1uo959j"
  id="ID"
/>
`;

exports[`View > prop "lang" > ar 1`] = `
<div
  class="css-1uo959j"
  dir="rtl"
  lang="ar"
/>
`;

exports[`View > prop "lang" > fr 1`] = `
<div
  class="css-1uo959j"
  dir="ltr"
  lang="fr"
/>
`;

exports[`View > prop "lang" > undefined 1`] = `
<div
  class="css-1uo959j"
/>
`;

exports[`View > prop "lang" > with dir 1`] = `
<div
  class="css-1uo959j"
  dir="ltr"
  lang="ar"
/>
`;

exports[`View > prop "role" > value alters HTML element 1`] = `
<article
  class="css-1uo959j"
/>
`;

exports[`View > prop "role" > value is "button" 1`] = `
<button
  class="css-1uo959j"
  type="button"
/>
`;

exports[`View > prop "role" > value is set 1`] = `
<div
  class="css-1uo959j"
  role="presentation"
/>
`;

exports[`View > prop "style" > value is set 1`] = `
<div
  class="css-1uo959j"
  style="border-width: 5px;"
/>
`;

exports[`View > prop "testID" > value is set 1`] = `
<div
  class="css-1uo959j"
  data-testid="123"
/>
`;
